--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,16 @@
         android:theme="@style/Theme.UniRide"
         tools:targetApi="31">
         <activity
-            android:name=".PassengerHomeActivity"
+            android:name=".InitialActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
+            android:name=".PassengerHomeActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".DriverManageTripsActivity"
