--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,7 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UniRide"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".DriverRateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DriverDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DriverAviableActivity"
+            android:exported="false" />
         <activity
             android:name=".SearchWheelActivity"
             android:exported="false" />
@@ -31,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".InitialActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
