--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniRide"
         tools:targetApi="31">
+
+        <!-- Actividades existentes -->
         <activity
             android:name=".NewPasswordActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".RecoverPasswordActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -29,7 +31,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -57,6 +58,28 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-    </application>
 
+        <!-- NUEVAS ACTIVIDADES -->
+
+        <!-- Pantalla de "Acerca de" -->
+        <activity
+            android:name=".AcercaDeActivity"
+            android:exported="false" />
+
+        <!-- Pantalla de "Billetera" -->
+        <activity
+            android:name=".BilleteraActivity"
+            android:exported="false" />
+
+        <!-- Pantalla de "Tarjeta" -->
+        <activity
+            android:name=".TarjetaActivity"
+            android:exported="false" />
+
+        <!-- Pantalla de "InfoTarjeta" -->
+        <activity
+            android:name=".InfoTarjetaActivity"
+            android:exported="false" />
+
+    </application>
 </manifest>
