--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:theme="@style/Theme.UniRide"
             tools:targetApi="31">
         <activity
+                android:name=".EditVehicle"
+                android:exported="false" />
+        <activity
                 android:name=".EditProfileActivity"
                 android:exported="false" />
         <activity
