Update: Change Photo in profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,16 @@
         <activity
                 android:name=".InfoTarjetaActivity"
                 android:exported="false" />
+
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="com.example.uniride.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
