chore: add fragment dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,3 +26,8 @@ androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version = "1.9.0" }
+hilt = { id = "com.google.dagger.hilt.android", version = "2.48" }
+safearfs-navigation = { id = "androidx.navigation.safeargs.kotlin", version = "2.7.1" }
+
+
