--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,17 @@
         android:theme="@style/Theme.UniRide"
         tools:targetApi="31">
         <activity
+            android:name=".ui.passenger.search.SearchFlowActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.auth.AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".EditVehicle"
             android:exported="false" />
@@ -55,14 +58,7 @@
             android:exported="false" />
         <activity
             android:name=".InitialActivity"
-            android:exported="false"/>
-
-
-
-
-
-
-
+            android:exported="false" />
         <activity
             android:name=".PassengerHomeActivity"
             android:exported="false" />
