--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.passenger.search.SearchFlowActivity"
+            android:windowSoftInputMode="adjustResize|stateVisible"
             android:exported="false" />
         <activity
             android:name=".ui.auth.AuthActivity"
