feat: implement publish route navigation flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniRide"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.driver.publish.PublishTripFlowActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -30,13 +32,13 @@
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
         <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="${MAPS_API_KEY}" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".ui.passenger.search.SearchFlowActivity"
-            android:windowSoftInputMode="adjustResize|stateVisible"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize|stateVisible" />
         <activity
             android:name=".ui.auth.AuthActivity"
             android:exported="true">
