--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:theme="@style/Theme.UniRide"
         tools:targetApi="31">
         <activity
+            android:name=".ui.driver.drawer.DriverDrawerFlowActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.passenger.drawer.PassengerDrawerFlowActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.driver.publish.PublishTripFlowActivity"
             android:exported="false" />
         <!--
