feat: add a notification object and the notification of "ask for a place"

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "uniride-fed59"
-  }
+    "default": "uniride-fed59",
+    "uniride": "uniride-fed59"
+  },
+  "targets": {},
+  "etags": {}
 }
