--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".connection.SupabaseApp"
@@ -20,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniRide"
         tools:targetApi="31">
+        <activity
+            android:name=".chats.ChatsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.driver.drawer.DriverDrawerFlowActivity"
             android:exported="false" />
@@ -57,12 +59,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".ui.MainActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
+
         <service
             android:name=".messaging.MyFirebaseMessagingService"
             android:exported="false">
@@ -70,7 +70,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
 
         <provider
             android:name="androidx.core.content.FileProvider"
