fix: check publish trip button using isDriver flag

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ render.experimental.xml
 *.keystore
 
 # Google Services (e.g. APIs or Firebase)
+app/google-services.json
 google-services.json
-
+firebase.json
 # Android Profiling
 *.hprof
 app/src/main/res/values/api.xml
